Update build.xml. [2839]
Mostly commenting out usage of the Z garbage collector, as it's only
available for Linux with JDK 11.